# cs323-weekly

./: .build-timestamp  .gitignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  start.sh
.claude/projects/-Users-zane-Documents-GitHub-cs323-weekly/memory/: project_urls.md
agent/: Dockerfile  agent.py  livekit.toml  pyproject.toml  setup_tavus.sh  start.sh  test_audio.py  test_e2e.py
docs/superpowers/plans/: 2026-04-09-tavus-direct-api.md
scripts/: backfill-transcripts.ts
src/: middleware.ts
src/app/: ascii-hero.tsx  globals.css  layout.tsx  page.tsx
src/app/api/assignments/: route.ts
src/app/api/assignments/[id]/: route.ts
src/app/api/assignments/[id]/conversation/: route.ts
src/app/api/assignments/[id]/signed-url/: route.ts
src/app/api/assignments/[id]/submissions/: route.ts
src/app/api/assignments/[id]/token/: route.ts
src/app/api/recordings/transfer/: route.ts
src/app/api/recordings/upload/: route.ts
src/app/api/students/: route.ts
src/app/api/students/[id]/: route.ts
src/app/api/transcripts/: route.ts
src/app/api/upload/: route.ts
src/app/api/webhooks/livekit/: route.ts
src/app/api/webhooks/tavus/: route.ts
src/app/student/: page.tsx
src/app/student/[assignmentId]/: page.tsx
src/app/teacher/: page.tsx
src/app/teacher/[assignmentId]/: page.tsx
src/components/: ascii-art.tsx  grid-bg.tsx  shuffle-text.tsx  waveform.tsx
src/lib/: anthropic.ts  api.ts  copy.ts  db.ts  elevenlabs.ts  google-drive.ts  livekit.ts  supabase.ts  tavus.ts
src/types/: pdf-parse.d.ts
(+2 files in other folders)
